--- a/h5editor/config.json
+++ b/h5editor/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "GoH5",
-    "version": "1.0.6",
-    "description": "可视化h5编辑器"
+    "name": "H5Editor",
+    "version": "1.0",
+    "description": "H5可视化编辑器"
 }
