--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.7",
+    "archiver": "^1.0.1",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.6.0",
@@ -42,6 +44,7 @@
     "md5": "^2.0.0",
     "minimist": "^1.2.0",
     "mongoose": "^4.4.6",
+    "node-native-zip": "^1.1.0",
     "pm2": "^1.0.2",
     "through-gulp": "^0.5.0",
     "vue-hot-reload-api": "^1.3.2",
