--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "file-stream-rotator": "0.0.7",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
@@ -43,8 +44,11 @@
     "lactate": "^0.13.12",
     "md5": "^2.0.0",
     "minimist": "^1.2.0",
+    "moment": "^2.14.1",
     "mongoose": "^4.4.6",
+    "morgan": "^1.7.0",
     "node-native-zip": "^1.1.0",
+    "perfect-scrollbar": "^0.6.12",
     "pm2": "^1.0.2",
     "through-gulp": "^0.5.0",
     "vue-hot-reload-api": "^1.3.2",
