--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-uglify": "^1.5.3",
     "jsx-loader": "^0.13.2",
     "lactate": "^0.13.12",
+    "log4js": "^0.6.38",
     "md5": "^2.0.0",
     "minimist": "^1.2.0",
     "moment": "^2.14.1",
