--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "adm-zip": "^0.4.7",
     "archiver": "^1.0.1",
-    "babel-core": "^6.6.5",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.6.5",    "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^5.8.35",
@@ -52,9 +51,11 @@
     "perfect-scrollbar": "^0.6.12",
     "pm2": "^1.0.2",
     "through-gulp": "^0.5.0",
+    "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.0",
     "vue-loader": "^8.2.0",
+    "vue-strap": "^1.1.3",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.14",
     "webpack-stream": "^3.1.0"
