--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "免费H5可视化编辑器",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "pm2 start ./app.js -i 8",
     "stop": "pm2 delete all",
+    "restart": "pm2 restart all",
     "test": "mocha ./test"
   },
   "keywords": [
@@ -18,7 +19,8 @@
   "dependencies": {
     "adm-zip": "^0.4.7",
     "archiver": "^1.0.1",
-    "babel-core": "^6.6.5",    "babel-loader": "^6.2.4",
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^5.8.35",
@@ -50,6 +52,7 @@
     "node-native-zip": "^1.1.0",
     "perfect-scrollbar": "^0.6.12",
     "pm2": "^1.0.2",
+    "q": "^1.4.1",
     "through-gulp": "^0.5.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
@@ -61,6 +64,8 @@
     "webpack-stream": "^3.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "superagent": "^2.2.0"
   }
 }
