--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "pm2 start ./app.js -i 8",
     "stop": "pm2 delete all",
     "restart": "pm2 restart all",
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "h5":"cd h5editor && gulp",
+    "views":"cd views && gulp",
+    "dev":"node app.js"
   },
   "keywords": [
     "h5",
@@ -32,6 +35,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "file-stream-rotator": "0.0.7",
+    "gm": "^1.23.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
