--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "stop": "pm2 delete all",
     "restart": "pm2 restart all",
     "test": "mocha ./test",
-    "h5":"cd h5editor && gulp",
-    "views":"cd views && gulp",
-    "dev":"node app.js"
+    "h5": "cd h5editor && gulp",
+    "views": "cd views && gulp",
+    "dev": "node app.js"
   },
   "keywords": [
     "h5",
@@ -57,6 +57,7 @@
     "perfect-scrollbar": "^0.6.12",
     "pm2": "^1.0.2",
     "q": "^1.4.1",
+    "request": "^2.75.0",
     "through-gulp": "^0.5.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
