--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-runtime": "^5.8.35",
     "body-parser": "^1.15.0",
     "connect-multiparty": "^2.0.0",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "ejs": "^2.4.1",
